<resources>
    <string name="app_name">Wheaton Explore</string>
    <string name="title_activity_maps">Wheaton Explore</string>
    <string name="parking_toggle">Parking</string>
    <string name="building_toggle">Buildings</string>
    <string name="housing_toggle">Housing</string>

    <string-array name="my_building">
        <item>Blanchard Hall</item>
        <item>Student Resource Center</item>
        <item>Billy Graham Center</item>
        <item>Buswell Memorial Library</item>
    </string-array>

    <string name="saga_menu">Dining Options</string>
    <string name="housing_menu">Housing Options</string>
    <string name="housing_options">Housing Options</string>
    <string name="campus_events">Campus Events</string>

    <string name="housing_option_houses">Houses</string>
    <string name="housing_option_underclassmen">Underclassmen</string>
    <string name="housing_options_upperclassmen">Upperclassmen</string>
    <string name="housing_options_apartments">Apartments</string>
    <string name="housing_options_backbutton">Back</string>

</resources>
