<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/HeaderBar"
        app:theme="@style/ActionBarThemeOverlay"
        app:popupTheme="@style/ActionBarPopupThemeOverlay"
        android:elevation="4dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_toggle"
            android:backgroundTint="@color/colorAccent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_toggle"
            android:backgroundTint="@color/colorAccent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/housing_toggle"
            android:backgroundTint="@color/colorAccent"/>

    </android.support.v7.widget.Toolbar>



</fragment>

